# explore-data

./: .env  .gitignore  .ruff.toml  Dockerfile  Makefile  README.md  app.py  datasets.yml  docker-compose.yml  environment.yaml  pyproject.toml  requirements.txt  requirements_frozen.txt  settings.env
assets/: custom.css
data/: credit.parquet
output/data/: data-profile.html  datasets.html
source/archive/: app_minimum.py  dynamic_graph_options.py  filtering.py  graph_ratio.py  upload_file.py
source/config/: ai_prompt.txt  graph_options.yml  graphing_configurations.yml  logging.conf  logging_to_file.conf  settings.py
source/entrypoints/: app.py  app2.py  cli.py  dynamic_graph_options.py  filtering.py  graph_ratio.py  sync_checklists.py  upload_file.py
source/entrypoints/assets/: custom.css
source/notebooks/: datasets.ipynb  notebook_settings.py  sandbox.ipynb
source/service/: datasets.py  etl.py
tests/: __init__.py  conftest.py  helpers.py  test_dash_utilities.py  test_datasets.py  test_settings.py  test_types.py  test_utilities.py
tests/test_files/datasets/: credit.pkl
tests/test_files/test_datasets/: datasets_cache.yml  datasets_no_cache.yml
tests/test_files/utilities/: test_build_tools_from_graph_configs__conversions.yml  test_build_tools_from_graph_configs__credit.yml
